src/objects/DGRLRelationship__c.object
<CustomObject>
    <fields>
        <fullName>DGRL__c</fullName>
        <label>DGRL</label>
        <referenceTo>DGRL__c</referenceTo>
        <relationshipName>Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lookup_Field_Parent__c</fullName>
        <label>Lookup Field Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Where_Clause__c</fullName>
        <label>Where Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DGRL Relationships</label>
    <nameField>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DGRL Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>